--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "playwright test --reporter=json > test-results/result.json",
+    "upload-results": "ts-node utils/sheetWriter.ts",
+    "test:with-upload": "npm run test && npm run upload-results"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "axios": "^1.10.0"
+    "axios": "^1.10.0",
+    "googleapis": "^154.0.0"
   }
 }
